force-app/main/default/objects/BMCServiceDesk__SysQVChartView__c/BMCServiceDesk__SysQVChartView__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the Chart view of QuickViews.</description>
    <label>Quickview Chart View</label>
    <nameField>
        <displayFormat>QVChart -{0000}</displayFormat>
        <label>QVChart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SysQVChartViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>