force-app/main/default/objects/BMCServiceDesk__SysQVChartView__c/fields/BMCServiceDesk__ChartDataField__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ChartDataField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKChartDataField</label>
    <referenceTo>BMCServiceDesk__SYSQVFieldInfo__c</referenceTo>
    <relationshipLabel>SysQVChartViews</relationshipLabel>
    <relationshipName>QueryChartViews</relationshipName>
    <type>Lookup</type>
</CustomField>