force-app/main/default/objects/BMCServiceDesk__SysQVChartView__c/fields/BMCServiceDesk__ChartType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ChartType__c</fullName>
    <label>Chart Type</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>