force-app/main/default/objects/BMCServiceDesk__SysQVChartView__c/fields/BMCServiceDesk__FKSYSQVQuery__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSYSQVQuery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKSYSQVQuery</label>
    <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
    <relationshipName>QueryChartViews</relationshipName>
    <type>Lookup</type>
</CustomField>