force-app/main/default/objects/BMCServiceDesk__SysQVChartView__c/fields/BMCServiceDesk__LinesLowerLimit__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LinesLowerLimit__c</fullName>
    <label>Lines Lower Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>