force-app/main/default/objects/BMCServiceDesk__SysQVChartView__c/fields/BMCServiceDesk__LinesUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LinesUpperLimit__c</fullName>
    <label>Lines Upper Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>