force-app/main/default/objects/BMCServiceDesk__SysQVChartView__c/fields/BMCServiceDesk__Sorting__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Sorting__c</fullName>
    <label>Sorting</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>